--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="container">
             <header class="head">
                 <div class="head__logo">
-                    <img src="images/logo.png" alt="website logo">
+                    <img src="images/logo(2).png" alt="website logo">
                     <h1>Logo</h1>
 
                 </div>
