--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page</title>
+    <title>Business Mate</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
@@ -14,15 +14,15 @@
         <div class="container">
             <header class="head">
                 <div class="head__logo">
-                    <img src="images/LOGO (2).png" alt="website logo">
-                    <h1>Logo</h1>
+                    <img src="assets/images/logo.png" alt="website logo">
+                    <h1>Business Mate</h1>
 
                 </div>
                 <hr>
                 <nav class="head__menu">
                     <ul>
-                        <button type="button" class="btn btn-secondary btn-rounded waves-effect">Login</button>
-                        <button type="button" class="btn btn-secondary btn-rounded waves-effect">Sign Up</button>
+                        <button type="button" class="btn btn-secondary btn-rounded waves-effect" style="margin:5px;margin-right:-280px;margin-top:-10px;">Sign Up</button>
+                        <button type="button" class="btn btn-secondary btn-rounded waves-effect" style="margin:5px;margin-left:20px;margin-top:-10px;">Login</button>
                     </ul>
                 </nav>
             </header>
@@ -31,17 +31,17 @@
         <div class="container">
             <div class="page-intro">
                 <div class="page-intro__text">
-                    <h2>Find everything about Starting business</h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam nemo nam explicabo reprehenderit, porro numquam autem quaerat iusto facilis? Minus.</p>
+                    <h1><strong><b>Find everything about Starting business</b></strong></h1>
+                    <p>Registering a company has never been easy. we help you do that in a set of simple steps.</p>
                 </div><br>
 <div class="container">
     <div class="form-group name1 col-md-5">
-        <label for="exampleInputEmail1" class="formText" style="white-space:nowrap;">NO OF OWNERS/PARTNERS:*</label>
+        <label for="exampleInputEmail1" class="formText" style="white-space:nowrap;color:grey;"><small>Number of Owners / Partners</small></label>
         <input type="text" class="form-control" id="name" aria-describedby="emailHelp" name="muverName">
     </div>
 
     <div class="form-group name2 col-md-5">
-        <label for="exampleInputEmail1" class="formText" style="white-space:nowrap;margin-left:88px;">INITIAL FUNDING:*</label>
+        <label for="exampleInputEmail1" class="formText" style="white-space:nowrap;margin-left:88px;color:grey;"><small>Initial Funding</small></label>
         <input type="text" class="form-control1" id="name" aria-describedby="emailHelp" name="muverPhone">
     </div>
 </div>
@@ -49,7 +49,7 @@
 
 
                 <div class="page-intro__icon">
-                    <img src="images/icon.png" alt="Icon">
+                    <img src="assets/images/icon.png" alt="Icon">
                 </div>
             </div>
         </div>
