--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="page-intro">
                 <div class="page-intro__text">
                     <h1><strong><b>Find everything about Starting business</b></strong></h1>
-                    <p>Registering a company has never been easy. we help you do that in a set of simple steps.</p>
+                    <p>Connecting to Company Secretaries was never so easy. we help you do that in a set of simple steps.</p>
                 </div><br>
 <div class="container">
     <div class="form-group name1 col-md-5">
