--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 <hr>
                 <nav class="head__menu">
                     <ul>
-                        <button type="button" class="btn btn-secondary btn-rounded waves-effect">Login</button>
-                        <button type="button" class="btn btn-secondary btn-rounded waves-effect">Sign Up</button>
+                        <button type="button" class="btn btn-secondary btn-rounded waves-effect"><a href="signin/index.html">Login</a></button>
+                        <button type="button" class="btn btn-secondary btn-rounded waves-effect"><a href="signup/index.html>Sign Up</a></button>
                     </ul>
                 </nav>
             </header>
