--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <input type="text" class="form-control1" id="name" aria-describedby="emailHelp" name="muverPhone">
     </div>
 </div>
-<button type="button" class="btn btn-secondary btn-rounded waves-effect" style="margin-left:39px;">Submit</button>
+<button type="button" class="btn btn-secondary btn-rounded waves-effect" style="margin-left:39px;"><a href="main/index.html">Submit</a></button>
 
 
                 <div class="page-intro__icon">
