--- a/main/MAIN.html
+++ b/main/MAIN.html
@@ -31,7 +31,7 @@
     margin-bottom: 30px;
   }
   .jumbotron {
-    background-color: #f4511e;
+    background-color: purple;
     color: #fff;
     padding: 100px 25px;
     font-family: Montserrat, sans-serif;
@@ -120,7 +120,7 @@
   }
   .navbar {
     margin-bottom: 0;
-    background-color: #f4511e;
+    background-color: purple;
     z-index: 9999;
     border: 0;
     font-size: 12px !important;
@@ -359,4 +359,3 @@ $(document).ready(function(){
 
 </body>
 </html>
-
