--- a/main/LLP.html
+++ b/main/LLP.html
@@ -210,8 +210,10 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#about">FEATURES</a></li>
-        <li><a href="#services">SERVICES</a></li>
-        <li><a href="#contact">CONTACT</a></li>
+        <li><a href="#register">Registration</a></li>
+        <li><a href="#docs">Docs Required</a></li>
+        <li><a href="#requirement">Requirement</a></li>
+        <li><a href="#advantage">Advantages</a></li>
       </ul>
     </div>
   </div>
@@ -219,7 +221,7 @@
 
 <div class="jumbotron text-center">
   <h1>Limited liability Partnership</h1>
-  <p>Features | Registration | Documents required | Requirement | Advantages</p>
+  <p></p>
 
 </div>
 
@@ -245,7 +247,7 @@ In LLP there can be adding of partner or removal of partner..</p>
   </div>
 </div>
 
-<div class="container-fluid bg-grey">
+<div id="register" class="container-fluid bg-grey">
   <div class="row">
     <div class="col-sm-4">
       <span class="glyphicon glyphicon-globe logo slideanim"></span>
@@ -253,14 +255,14 @@ In LLP there can be adding of partner or removal of partner..</p>
     <div class="col-sm-8">
       <h2>Registration Procedure of Limited Liability Partnership</h2><br>
       <h4><strong>These are the few steps that one should follow during registration Procedure of Limited Liability Partnership.</strong></h4><br>
-      <p><b>Step I Basic check before Incorporation</b> <ul> • Identify designated partners </ul> <ul>• Acquire Digital Signature (class 2) of the proposed designated partner (Atleast 1 DSC is required for Signing the Application)
+      <p><b>Step I Basic check before Incorporation</b> <ul>	• Identify designated partners </ul> <ul>• Acquire Digital Signature (class 2) of the proposed designated partner (Atleast 1 DSC is required for Signing the Application)
 </ul><ul>• Designated partner if does not hold DIN then will be allotted through Filing form only and no separate application is required.</ul>
 <b>Step II Approval of Name </b><ul>• Check availability of name and get approval in RUN Form for LLP.</ul>
 <b>Step III Filing of Incorporation documents </b><ul>• Apply for incorporation of LLP in Filling form "Form for Incorporation of Limited Liability Partnership"</ul>
 <ul>• Detailed description of all the partners and designated partner and subscriber sheet and attachment as required described below in detail.</ul>
 <ul>• Once the Form Filing is completed in all respect ,then it is to be digitally signed by designated partner and also to be certified by Advocate/CA/CS/Cost Accountants in practice.</ul>
 <ul>• The form after this need to be uploaded on MCA portal with the prescribed fees.</ul>
-<b>Step IV Certification of Registration</b> <ul>• Registrar after satisfying himself about completeness in documents and various compliances, issue certificate of incorporation.</ul>
+<b>Step IV Certification of Registration</b>	<ul>• Registrar after satisfying himself about completeness in documents and various compliances, issue certificate of incorporation.</ul>
 <ul>• In case of any discrepancies found in the form, then it comes in resubmission and need to be uploaded again with satisfying the remarks by MCA.</ul>
 <b>Step V Post incorporation compliance</b><ul>• within 30 days of the incorporation, need to file Form 3 — LLP Agreement with the signed and stamped, notarized LLP Agreement.</ul></strong> .</p>
     </div>
@@ -268,7 +270,7 @@ In LLP there can be adding of partner or removal of partner..</p>
 </div>
 
 <!-- Container (Services Section) -->
-<div id="about" class="container-fluid">
+<div id="docs" class="container-fluid">
   <div class="row">
     <div class="col-sm-8">
       <h2> Documents Required for Limited Liability Partnership</h2><br>
@@ -296,7 +298,7 @@ In LLP there can be adding of partner or removal of partner..</p>
 </div>
 
 <!-- Image of location/map -->
-<div class="container-fluid bg-grey">
+<div id="requirement" class="container-fluid bg-grey">
   <div class="row">
     <div class="col-sm-4">
       <span class="glyphicon glyphicon-globe logo slideanim"></span>
@@ -316,7 +318,7 @@ In LLP there can be adding of partner or removal of partner..</p>
   </div>
 </div>
 <!----content---->
-<div id="about" class="container-fluid">
+<div id="advantage" class="container-fluid">
   <div class="row">
     <div class="col-sm-8">
       <h2>
