--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="container">
             <header class="head">
                 <div class="head__logo">
-                    <img src="/images/logo.png" alt="website logo">
+                    <img src="images/logo.png" alt="website logo">
                     <h1>Business Mate</h1>
 
                 </div>
@@ -54,7 +54,7 @@
 
 
                 <div class="page-intro__icon">
-                    <img src="/images/icon.png" alt="Icon">
+                    <img src="images/icon.png" alt="Icon">
                 </div>
             </div>
         </div>
